# resume_rag_backend

./: .dockerignore  Dockerfile  app.py  init_db.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: cgu.md  fee_structure.md
rag/: __init__.py  config.py  graph.py  retrievers.py  state.py
rag/ingestion/: __init__.py  loaders.py  pipeline.py
rag/nodes/: __init__.py  agent.py  generation.py  grader.py  rewrite.py
tests/: test_api.py
