[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.14",
    "langchain-core>=1.2.24",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-pinecone>=0.2.13",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.7.24",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=5.3.0",
    "structlog>=25.5.0",
    "torch>=2.11.0",
    "transformers>=5.5.0",
    "einops>=0.8.2",
    "uvicorn>=0.42.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" }
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
