[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain>=1.2.14",
    "langchain-core>=1.2.24",
    "langchain-google-genai>=4.2.1",
    "langchain-groq>=1.1.2",
    "langchain-pinecone>=0.2.13",
    "langchain-postgres>=0.0.17",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.1.4",
    "langgraph-checkpoint-postgres>=3.0.5",
    "langsmith>=0.7.24",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.0.1",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
