[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langchain-pinecone>=0.2.0",
    "langchain-postgres>=0.0.12",
    "langchain-tavily>=0.1.2",
    "langgraph>=0.2.39",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langsmith>=0.1.139",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "redis>=5.0.1",
    "langchain-redis>=0.0.6",
    "structlog>=24.4.0",
    "uvicorn>=0.30.6",
    "rank-bm25>=0.2.2",
    "langchain-cohere>=0.3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
